--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19",
-    "eslint": "^8.21.0"
+    "eslint": "^8.21.0",
+    "nodemon": "^2.0.19"
   }
 }
